--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 debug/
 target/
 assets/
+assets/spritesheets/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
@@ -13,3 +14,6 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# All images
+*.png
