--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 name = "logibaba"
 path = "src/main.rs"
 
+[dependencies]
+lazy_static = "^1.4.0"
+
 [dependencies.sdl2]
 version = "*"
 default-features = false
-features = ["image"]
+features = ["image", "ttf"]
